Fixed scrollbar

--- a/src/components/poster/Poster.scss
+++ b/src/components/poster/Poster.scss
@@ -34,3 +34,7 @@
     font-size: 20px;
     margin-top: 5px;
 }
+
+#poster-title {
+    font-size: 15px;
+}
